# linear-algebra

./: .gitignore  CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt
example/matrix/: matrix_auxiliaries.cpp  matrix_generics.cpp  matrix_operations.cpp  matrix_operators.cpp  qr_decomposition.cpp  vector_generics.cpp  vector_operators.cpp
include/boost/numeric/ublas/matrix/: dynamic_matrix.hpp  engine_traits.hpp  expression.hpp  helper.hpp  matrix.hpp  matrix_engine.hpp  matrix_expression.hpp  static_matrix.hpp  tags.hpp  vector.hpp  vector_engine.hpp  vector_expression.hpp  vector_view.hpp
include/boost/numeric/ublas/matrix_old/: engine_traits.hpp  (+2 more)
include/la/: matrix.hpp  matrix_engine.hpp  matrix_expression.hpp  matrix_operators.hpp  matrix_vector_expression.hpp  matrix_view.hpp  slice.hpp  vector.hpp  vector_engine.hpp  vector_expression.hpp  vector_operators.hpp  vector_view.hpp
include/la/detail/: helper.hpp  tags.hpp
include/la/traits/: engine_traits.hpp  expression_traits.hpp  layout_traits.hpp  read_write_traits.hpp  storage_traits.hpp
include/matrix_old/: engine_traits.hpp  scalar_traits.hpp  storage_traits.hpp
include/matrix_old/matrix/: dynamic_matrix.hpp  matrix.hpp  matrix_engine.hpp  matrix_expression.hpp
include/matrix_old/matrix/traits/: engine_traits.hpp  matrix_traits.hpp
include/matrix_old/vector/: vector.hpp  vector_engine.hpp  vector_expression.hpp
include/matrix_old/vector/traits/: engine_traits.hpp  vector_traits.hpp
test/matrix/: CMakeLists.txt  matrix_access.cpp  matrix_auxillaries.cpp  matrix_operations.cpp
(+23 files in other folders)
